2010-05-20  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Adam Roben.

        Avoid flushing CA layers when a layout is pending
        https://bugs.webkit.org/show_bug.cgi?id=39463
        <rdar://problem/7999463>

        Avoid rendering the compositing layers to the screen if there's a layout pending,
        since the layer tree not in a state that should be presented to the user.
        
        This fixes flashes in some types of content that dynamically add and remove layers.

        Do this by adding a WKCACFLayerRendererClient for WKCACFLayerRenderer, which it can
        call through to ask whether now is a good time to render. If not, it schedules
        another render soon.
        
        * platform/graphics/win/WKCACFLayerRenderer.h:
        (WebCore::WKCACFLayerRendererClient::~WKCACFLayerRendererClient):
        * platform/graphics/win/WKCACFLayerRenderer.cpp:
        (WebCore::WKCACFLayerRenderer::acceleratedCompositingAvailable):
        (WebCore::WKCACFLayerRenderer::create):
        (WebCore::WKCACFLayerRenderer::WKCACFLayerRenderer):
        (WebCore::WKCACFLayerRenderer::render):

2010-05-20  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Eric Seidel.

        [BREWMP] Don't include CoreFoundation.h when building for BREW MP
        https://bugs.webkit.org/show_bug.cgi?id=39405

        Add !defined(BUILDING_BREWMP__) guard for CoreFoundation.h.

        * WebCorePrefix.h:

2010-05-20  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Eric Seidel.

        [BREWMP] Add ScrollTheme
        https://bugs.webkit.org/show_bug.cgi?id=39406

        As BREW MP always uses frame flattening, there is no need to render scorllbars.
        Use the default scrollbar theme with thickness 0.

        * platform/brew/ScrollbarThemeBrew.cpp: Added.
        (WebCore::ScrollbarTheme::nativeTheme):
        (WebCore::ScrollbarThemeBrew::~ScrollbarThemeBrew):
        * platform/brew/ScrollbarThemeBrew.h: Added.
